retrieveUnpackaged/objects/Catalog_Template__c.object
<CustomObject>
    <fields>
        <fullName>Category_Text_Color__c</fullName>
        <defaultValue>&quot;#EEEEEE&quot;</defaultValue>
        <label>Category Text Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Left_Text_Color__c</fullName>
        <defaultValue>&quot;#EEEEEE&quot;</defaultValue>
        <label>Header Left Text Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Right_Text_Color__c</fullName>
        <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
        <label>Header Right Text Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtitle_Text_Color__c</fullName>
        <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
        <label>Subtitle Text Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtitle_Text_Size__c</fullName>
        <label>Subtitle Text Size</label>
        <picklist>
            <picklistValues>
                <fullName>18px</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24px</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36px</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>48px</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subtitle_Text__c</fullName>
        <defaultValue>&quot;WELCOME TO OUR CATALOG!&quot;</defaultValue>
        <label>Subtitle Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Text_Color__c</fullName>
        <defaultValue>&quot;#FFF6C8&quot;</defaultValue>
        <label>Title Text Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Text_Size__c</fullName>
        <label>Title Text Size</label>
        <picklist>
            <picklistValues>
                <fullName>40px</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48px</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56px</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>64px</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>72px</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80px</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>84px</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>88px</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title_Text__c</fullName>
        <defaultValue>&quot;FORCE.COM LABS&quot;</defaultValue>
        <label>Title Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Catalog Template</label>
    <nameField>
        <label>Catalog Template  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catalog Template</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>